--- a/packages/apollo-angular-cache-ngrx/package.json
+++ b/packages/apollo-angular-cache-ngrx/package.json
@@ -23,36 +23,37 @@
     "xbuild": "ng-packagr -p ng-package.js",
     "xtest": "yarn test-only",
     "test-only": "jest --config jest.config.js",
-    "deploy": "yarn build && npm publish build"
+    "deploy": "yarn build && npm publish build",
+    "deploy:next": "yarn build && npm publish build --tag next"
   },
   "peerDependencies": {
-    "@angular/core": "^6.1.0 || ^7.0.0 || ^8.0.0",
+    "@angular/core": "^6.1.0 || ^7.0.0 || ^8.0.0 || ^9.0.0",
     "@ngrx/store": "^6.0.0 || ^7.0.0 || ^8.0.0",
     "rxjs": "^6.0.0"
   },
   "devDependencies": {
-    "@angular/animations": "8.2.14",
-    "@angular/common": "8.2.14",
-    "@angular/compiler": "8.2.14",
-    "@angular/compiler-cli": "8.2.14",
-    "@angular/core": "8.2.14",
-    "@angular/platform-browser": "8.2.14",
-    "@angular/platform-browser-dynamic": "8.2.14",
+    "@angular/animations": "9.1.0",
+    "@angular/common": "9.1.0",
+    "@angular/compiler": "9.1.0",
+    "@angular/compiler-cli": "9.1.0",
+    "@angular/core": "9.1.0",
+    "@angular/platform-browser": "9.1.0",
+    "@angular/platform-browser-dynamic": "9.1.0",
     "@ngrx/store": "8.6.0",
-    "@types/graphql": "14.5.0",
-    "@types/jest": "24.9.1",
-    "graphql": "14.5.8",
-    "graphql-tag": "2.10.1",
-    "jest": "24.9.0",
+    "@types/jest": "25.1.4",
+    "graphql": "14.6.0",
+    "graphql-tag": "2.10.3",
+    "jest": "25.2.3",
     "jest-zone-patch": "0.0.10",
-    "ng-packagr": "5.7.1",
+    "ng-packagr": "9.1.0",
     "rxjs": "6.5.4",
-    "ts-jest": "25.0.0",
-    "typescript": "3.5.3",
-    "zone.js": "0.10.2"
+    "ts-jest": "25.2.1",
+    "typescript": "3.8.3",
+    "zone.js": "0.10.3"
   },
   "dependencies": {
     "apollo-cache": "^1.1.0",
-    "apollo-cache-inmemory": "^1.1.5"
+    "apollo-cache-inmemory": "^1.1.5",
+    "tslib": "^1.11.0"
   }
 }
