--- a/packages/apollo-angular-link-persisted/package.json
+++ b/packages/apollo-angular-link-persisted/package.json
@@ -7,7 +7,7 @@
   "main": "build/bundles/ngApolloLinkPersisted.umd.js",
   "module": "build/fesm5/ngApolloLinkPersisted.js",
   "typings": "build/ngApolloLinkPersisted.d.ts",
-  "version": "1.1.0",
+  "version": "1.2.0-alpha.0",
   "repository": "https://github.com/apollographql/apollo-angular/tree/master/packages/apollo-angular-link-persisted",
   "keywords": [
     "apollo",
@@ -18,24 +18,25 @@
     "build": "ng-packagr -p ng-package.js",
     "test": "yarn test-only",
     "test-only": "jest --config jest.config.js",
-    "deploy": "yarn build && npm publish build"
+    "deploy": "yarn build && npm publish build",
+    "deploy:next": "yarn build && npm publish build --tag next"
   },
   "peerDependencies": {
     "apollo-link": "^1.0.0"
   },
   "dependencies": {
     "apollo-link-context": "^1.0.7",
-    "apollo-link-persisted-queries": "~0.2.0"
+    "apollo-link-persisted-queries": "~0.2.0",
+    "tslib": "^1.11.0"
   },
   "devDependencies": {
-    "@types/graphql": "14.5.0",
-    "@types/jest": "24.9.1",
+    "@types/jest": "25.1.4",
     "apollo-link": "1.2.13",
-    "graphql": "14.5.8",
-    "graphql-tag": "2.10.1",
-    "jest": "24.9.0",
-    "ng-packagr": "5.7.1",
-    "ts-jest": "25.0.0",
-    "typescript": "3.5.3"
+    "graphql": "14.6.0",
+    "graphql-tag": "2.10.3",
+    "jest": "25.2.3",
+    "ng-packagr": "9.1.0",
+    "ts-jest": "25.2.1",
+    "typescript": "3.8.3"
   }
 }
