--- a/packages/apollo-angular-link-http-batch/package.json
+++ b/packages/apollo-angular-link-http-batch/package.json
@@ -24,7 +24,7 @@
   "peerDependencies": {
     "@angular/common": "^6.0.0 || ^7.0.0 || ^8.0.0 || ^9.0.0",
     "@angular/core": "^6.0.0 || ^7.0.0 || ^8.0.0 || ^9.0.0",
-    "graphql": ">=0.11.0 <0.14.0 || ^14.0.0"
+    "graphql": ">=0.11.0 <0.14.0 || ^14.0.0 || ^15.0.0"
   },
   "dependencies": {
     "apollo-angular-link-http-common": "~1.9.0-alpha.0",
@@ -44,7 +44,7 @@
     "@types/jest": "25.1.4",
     "apollo-cache-inmemory": "1.6.5",
     "apollo-client": "2.6.8",
-    "graphql": "14.6.0",
+    "graphql": "15.0.0",
     "graphql-tag": "2.10.3",
     "jest": "25.2.3",
     "jest-zone-patch": "0.0.10",
