Angular 9 and GraphQL 15 (#1484)

--- a/packages/apollo-angular-link-headers/package.json
+++ b/packages/apollo-angular-link-headers/package.json
@@ -7,7 +7,7 @@
   "main": "build/bundles/ngApolloLinkHeaders.umd.js",
   "module": "build/fesm5/ngApolloLinkHeaders.js",
   "typings": "build/ngApolloLinkHeaders.d.ts",
-  "version": "1.4.0",
+  "version": "1.5.0-alpha.0",
   "repository": "https://github.com/apollographql/apollo-angular/tree/master/packages/apollo-angular-link-headers",
   "keywords": [
     "apollo",
@@ -18,23 +18,26 @@
     "build": "ng-packagr -p ng-package.js",
     "test": "yarn test-only",
     "test-only": "jest --config jest.config.js",
-    "deploy": "yarn build && npm publish build"
+    "deploy": "yarn build && npm publish build",
+    "deploy:next": "yarn build && npm publish build --tag next"
+  },
+  "dependencies": {
+    "tslib": "^1.11.0"
   },
   "peerDependencies": {
-    "@angular/common": "^6.0.0 || ^7.0.0 || ^8.0.0",
+    "@angular/common": "^6.0.0 || ^7.0.0 || ^8.0.0 || ^9.0.0",
     "apollo-link": "^1.0.0"
   },
   "devDependencies": {
-    "@angular/common": "8.2.14",
-    "@angular/core": "8.2.14",
-    "@types/graphql": "14.5.0",
-    "@types/jest": "24.9.1",
-    "apollo-link": "1.2.13",
-    "graphql": "14.5.8",
-    "graphql-tag": "2.10.1",
-    "jest": "24.9.0",
-    "ng-packagr": "5.7.1",
-    "ts-jest": "25.0.0",
-    "typescript": "3.5.3"
+    "@angular/common": "9.1.0",
+    "@angular/core": "9.1.0",
+    "@types/jest": "25.1.4",
+    "apollo-link": "1.2.14",
+    "graphql": "15.0.0",
+    "graphql-tag": "2.10.3",
+    "jest": "25.2.3",
+    "ng-packagr": "9.1.0",
+    "ts-jest": "25.2.1",
+    "typescript": "3.8.3"
   }
 }
