--- a/packages/apollo-angular/package.json
+++ b/packages/apollo-angular/package.json
@@ -1,7 +1,7 @@
 {
   "name": "apollo-angular",
   "description": "Use your GraphQL data in your Angular app, with the Apollo Client",
-  "version": "1.8.0",
+  "version": "1.9.0-alpha.0",
   "author": "Kamil Kisiela <kamil.kisiela@gmail.com> (http://github.com/kamilkisiela/)",
   "license": "MIT",
   "sideEffects": false,
@@ -26,45 +26,46 @@
     "test:testing": "jest --config testing/jest.config.js",
     "test:schematics": "jest --config schematics/jest.config.js",
     "prebuild": "rm -rf build/",
-    "deploy": "yarn build && npm publish build"
+    "deploy": "yarn build && npm publish build",
+    "deploy:next": "yarn build && npm publish build --tag next"
   },
   "peerDependencies": {
-    "@angular/core": "^6.1.0 || ^7.0.0 || ^8.0.0",
+    "@angular/core": "^6.1.0 || ^7.0.0 || ^8.0.0 || ^9.0.0",
     "apollo-client": "^2.3.4",
     "apollo-link": "^1.0.0",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.20 || ~0.9.0 || ~0.10.0"
   },
   "dependencies": {
-    "semver": "^7.0.0"
+    "semver": "^7.0.0",
+    "tslib": "^1.11.0"
   },
   "devDependencies": {
-    "@angular-devkit/core": "8.3.23",
-    "@angular-devkit/schematics": "8.3.23",
-    "@angular/common": "8.2.14",
-    "@angular/compiler": "8.2.14",
-    "@angular/compiler-cli": "8.2.14",
-    "@angular/core": "8.2.14",
-    "@angular/platform-browser": "8.2.14",
-    "@angular/platform-browser-dynamic": "8.2.14",
-    "@schematics/angular": "8.3.23",
-    "@types/graphql": "14.5.0",
-    "@types/jest": "24.9.1",
+    "@angular-devkit/core": "9.1.0",
+    "@angular-devkit/schematics": "9.1.0",
+    "@angular/common": "9.1.0",
+    "@angular/compiler": "9.1.0",
+    "@angular/compiler-cli": "9.1.0",
+    "@angular/core": "9.1.0",
+    "@angular/platform-browser": "9.1.0",
+    "@angular/platform-browser-dynamic": "9.1.0",
+    "@schematics/angular": "9.1.0",
+    "@types/jest": "25.1.4",
     "@types/node": "13.1.6",
-    "@types/semver": "6.2.0",
+    "@types/semver": "7.1.0",
     "apollo-cache-inmemory": "1.6.5",
     "apollo-client": "2.6.8",
-    "apollo-link": "1.2.13",
+    "apollo-link": "1.2.14",
     "cpx": "1.5.0",
-    "graphql": "14.5.8",
-    "graphql-tag": "2.10.1",
-    "jest": "24.9.0",
+    "graphql": "15.0.0",
+    "graphql-tag": "2.10.3",
+    "jest": "25.2.3",
     "jest-zone-patch": "0.0.10",
-    "ng-packagr": "5.7.1",
+    "ng-packagr": "9.1.0",
     "rxjs": "6.5.4",
-    "ts-jest": "25.0.0",
-    "typescript": "3.5.3",
-    "zone.js": "0.10.2"
+    "ts-jest": "25.2.1",
+    "typescript": "3.8.3",
+    "zone.js": "0.10.3"
   },
   "schematics": "./schematics/collection.json"
 }
