--- a/packages/apollo-angular-boost/package.json
+++ b/packages/apollo-angular-boost/package.json
@@ -6,7 +6,7 @@
   "main": "build/bundles/ngApolloBoost.umd.js",
   "module": "build/fesm5/ngApolloBoost.js",
   "typings": "build/ngApolloBoost.d.ts",
-  "version": "1.8.0-alpha.0",
+  "version": "1.8.0",
   "repository": "https://github.com/apollographql/apollo-angular/tree/master/packages/apollo-angular-boost",
   "keywords": [
     "apollo",
@@ -25,8 +25,8 @@
     "@angular/core": "^6.1.0 || ^7.0.0 || ^8.0.0 || ^9.0.0"
   },
   "dependencies": {
-    "apollo-angular": "~1.9.0-alpha.0",
-    "apollo-angular-link-http": "~1.10.0-alpha.0",
+    "apollo-angular": "~1.9.0",
+    "apollo-angular-link-http": "~1.10.0",
     "apollo-cache-inmemory": "~1.6.0",
     "apollo-client": "^2.6.0",
     "apollo-link": "~1.2.2",
