--- a/packages/apollo-angular-link-http-batch/package.json
+++ b/packages/apollo-angular-link-http-batch/package.json
@@ -7,7 +7,7 @@
   "main": "build/bundles/ngApolloLinkHttpBatch.umd.js",
   "module": "build/fesm5/ngApolloLinkHttpBatch.js",
   "typings": "build/ngApolloLinkHttpBatch.d.ts",
-  "version": "1.8.0-alpha.0",
+  "version": "1.8.0",
   "repository": "https://github.com/apollographql/apollo-angular/tree/master/packages/apollo-angular-link-http-batch",
   "keywords": [
     "apollo",
@@ -27,7 +27,7 @@
     "graphql": ">=0.11.0 <0.14.0 || ^14.0.0 || ^15.0.0"
   },
   "dependencies": {
-    "apollo-angular-link-http-common": "~1.9.0-alpha.0",
+    "apollo-angular-link-http-common": "~1.9.0",
     "apollo-link": "^1.0.0",
     "apollo-link-batch": "^1.1.2",
     "tslib": "^1.11.0"
