--- a/packages/apollo-angular-link-http-common/package.json
+++ b/packages/apollo-angular-link-http-common/package.json
@@ -7,7 +7,7 @@
   "main": "build/bundles/ngApolloLinkHttpCommon.umd.js",
   "module": "build/fesm5/ngApolloLinkHttpCommon.js",
   "typings": "build/ngApolloLinkHttpCommon.d.ts",
-  "version": "1.9.0-alpha.0",
+  "version": "1.9.0",
   "repository": "https://github.com/apollographql/apollo-angular/tree/master/packages/apollo-angular-link-http-common",
   "keywords": [
     "apollo",
