--- a/packages/apollo-angular-link-http/package.json
+++ b/packages/apollo-angular-link-http/package.json
@@ -7,7 +7,7 @@
   "main": "build/bundles/ngApolloLinkHttp.umd.js",
   "module": "build/fesm5/ngApolloLinkHttp.js",
   "typings": "build/ngApolloLinkHttp.d.ts",
-  "version": "1.10.0-alpha.0",
+  "version": "1.10.0",
   "repository": "https://github.com/apollographql/apollo-angular/tree/master/packages/apollo-angular-link-http",
   "keywords": [
     "apollo",
@@ -28,7 +28,7 @@
     "graphql": ">=0.11.0 <0.14.0 || ^14.0.0 || ^15.0.0"
   },
   "dependencies": {
-    "apollo-angular-link-http-common": "~1.9.0-alpha.0",
+    "apollo-angular-link-http-common": "~1.9.0",
     "extract-files": "6.0.0",
     "tslib": "^1.11.0"
   },
@@ -42,7 +42,7 @@
     "@angular/platform-browser-dynamic": "9.1.0",
     "@angular/platform-server": "9.1.0",
     "@types/jest": "25.1.4",
-    "apollo-angular": "1.9.0-alpha.0",
+    "apollo-angular": "1.9.0",
     "apollo-cache-inmemory": "1.6.5",
     "apollo-client": "2.6.8",
     "apollo-link": "1.2.14",
