--- a/packages/apollo-angular/package.json
+++ b/packages/apollo-angular/package.json
@@ -1,7 +1,7 @@
 {
   "name": "apollo-angular",
   "description": "Use your GraphQL data in your Angular app, with the Apollo Client",
-  "version": "1.9.0-alpha.0",
+  "version": "1.9.0",
   "author": "Kamil Kisiela <kamil.kisiela@gmail.com> (http://github.com/kamilkisiela/)",
   "license": "MIT",
   "sideEffects": false,
@@ -33,6 +33,7 @@
     "@angular/core": "^6.1.0 || ^7.0.0 || ^8.0.0 || ^9.0.0",
     "apollo-client": "^2.3.4",
     "apollo-link": "^1.0.0",
+    "graphql": ">=0.11.0 <0.14.0 || ^14.0.0 || ^15.0.0",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.20 || ~0.9.0 || ~0.10.0"
   },
