--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,26 +1,20 @@
 {
-  "extends": [
-    "config:js-lib"
-  ],
+  "extends": ["config:base"],
   "timezone": "Europe/Warsaw",
-  "schedule": [
-    "after 11pm and before 6am on every weekday"
-  ],
-  "prCreation": "not-pending",
+  "schedule": ["after 11pm and before 6am on every weekday"],
+  "prConcurrentLimit": 5,
+  "prHourlyLimit": 5,
+  "prCreation": "immediate",
   "automerge": true,
   "major": {
     "automerge": false
   },
-  "assignees": [
-    "@kamilkisiela"
-  ],
-  "reviewers": [
-    "@kamilkisiela"
-  ],
-  "pathRules": [{
-    "paths": ["docs/package.json"],
-    "extends": [
-      "apollo-docs"
-    ]
-  }]
+  "assignees": ["@kamilkisiela"],
+  "reviewers": ["@kamilkisiela"],
+  "pathRules": [
+    {
+      "paths": ["docs/package.json"],
+      "extends": ["apollo-docs"]
+    }
+  ]
 }
