--- a/packages/apollo-angular/package.json
+++ b/packages/apollo-angular/package.json
@@ -38,7 +38,7 @@
     "deploy:next": "yarn build && npm publish build --tag next"
   },
   "peerDependencies": {
-    "@angular/core": "^6.1.0 || ^7.0.0 || ^8.0.0 || ^9.0.0",
+    "@angular/core": "^6.1.0 || ^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0",
     "apollo-client": "^2.3.4",
     "apollo-link": "^1.0.0",
     "graphql": ">=0.11.0 <0.14.0 || ^14.0.0 || ^15.0.0",
@@ -47,33 +47,33 @@
   },
   "dependencies": {
     "semver": "^7.0.0",
-    "tslib": "^1.11.0"
+    "tslib": "^2.0.0"
   },
   "devDependencies": {
-    "@angular-devkit/core": "9.1.1",
-    "@angular-devkit/schematics": "9.1.1",
-    "@angular/common": "9.1.1",
-    "@angular/compiler": "9.1.1",
-    "@angular/compiler-cli": "9.1.1",
-    "@angular/core": "9.1.1",
-    "@angular/platform-browser": "9.1.1",
-    "@angular/platform-browser-dynamic": "9.1.1",
-    "@schematics/angular": "9.1.1",
-    "@types/jest": "25.2.1",
+    "@angular-devkit/core": "10.0.1",
+    "@angular-devkit/schematics": "10.0.1",
+    "@angular/common": "10.0.2",
+    "@angular/compiler": "10.0.2",
+    "@angular/compiler-cli": "10.0.2",
+    "@angular/core": "10.0.2",
+    "@angular/platform-browser": "10.0.2",
+    "@angular/platform-browser-dynamic": "10.0.2",
+    "@schematics/angular": "10.0.1",
+    "@types/jest": "26.0.4",
     "@types/node": "13.11.1",
-    "@types/semver": "7.1.0",
-    "apollo-cache-inmemory": "1.6.5",
-    "apollo-client": "2.6.8",
+    "@types/semver": "7.3.1",
+    "apollo-cache-inmemory": "1.6.6",
+    "apollo-client": "2.6.10",
     "apollo-link": "1.2.14",
     "cpx": "1.5.0",
-    "graphql": "15.0.0",
+    "graphql": "15.3.0",
     "graphql-tag": "2.10.3",
-    "jest": "25.3.0",
+    "jest": "26.1.0",
     "jest-zone-patch": "0.0.10",
-    "ng-packagr": "9.1.1",
-    "rxjs": "6.5.5",
-    "ts-jest": "25.3.1",
-    "typescript": "3.8.3",
+    "ng-packagr": "10.0.0",
+    "rxjs": "6.6.0",
+    "ts-jest": "26.1.1",
+    "typescript": "3.9.6",
     "zone.js": "0.10.3"
   },
   "schematics": "./schematics/collection.json"
