--- a/packages/apollo-angular-boost/package.json
+++ b/packages/apollo-angular-boost/package.json
@@ -29,8 +29,8 @@
     "deploy:next": "yarn build && npm publish build --tag next"
   },
   "peerDependencies": {
-    "@angular/common": "^6.1.0 || ^7.0.0 || ^8.0.0 || ^9.0.0",
-    "@angular/core": "^6.1.0 || ^7.0.0 || ^8.0.0 || ^9.0.0"
+    "@angular/common": "^6.1.0 || ^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0",
+    "@angular/core": "^6.1.0 || ^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0"
   },
   "dependencies": {
     "apollo-angular": "~1.9.1",
@@ -41,25 +41,25 @@
     "apollo-link-error": "~1.1.0",
     "apollo-link-state": "~0.4.1",
     "graphql-tag": "~2.10.0",
-    "tslib": "^1.11.0"
+    "tslib": "^2.0.0"
   },
   "devDependencies": {
-    "@angular/animations": "9.1.1",
-    "@angular/common": "9.1.1",
-    "@angular/compiler": "9.1.1",
-    "@angular/compiler-cli": "9.1.1",
-    "@angular/core": "9.1.1",
-    "@angular/platform-browser": "9.1.1",
-    "@angular/platform-browser-dynamic": "9.1.1",
-    "@angular/platform-server": "9.1.1",
-    "@types/jest": "25.2.1",
-    "graphql": "15.0.0",
-    "jest": "25.3.0",
+    "@angular/animations": "10.0.2",
+    "@angular/common": "10.0.2",
+    "@angular/compiler": "10.0.2",
+    "@angular/compiler-cli": "10.0.2",
+    "@angular/core": "10.0.2",
+    "@angular/platform-browser": "10.0.2",
+    "@angular/platform-browser-dynamic": "10.0.2",
+    "@angular/platform-server": "10.0.2",
+    "@types/jest": "26.0.4",
+    "graphql": "15.3.0",
+    "jest": "26.1.0",
     "jest-zone-patch": "0.0.10",
-    "ng-packagr": "9.1.1",
-    "rxjs": "6.5.5",
-    "ts-jest": "25.3.1",
-    "typescript": "3.8.3",
+    "ng-packagr": "10.0.0",
+    "rxjs": "6.6.0",
+    "ts-jest": "26.1.1",
+    "typescript": "3.9.6",
     "zone.js": "0.10.3"
   }
 }
