--- a/packages/apollo-angular-link-headers/package.json
+++ b/packages/apollo-angular-link-headers/package.json
@@ -30,22 +30,22 @@
     "deploy:next": "yarn build && npm publish build --tag next"
   },
   "dependencies": {
-    "tslib": "^1.11.0"
+    "tslib": "^2.0.0"
   },
   "peerDependencies": {
-    "@angular/common": "^6.0.0 || ^7.0.0 || ^8.0.0 || ^9.0.0",
+    "@angular/common": "^6.0.0 || ^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0",
     "apollo-link": "^1.0.0"
   },
   "devDependencies": {
-    "@angular/common": "9.1.1",
-    "@angular/core": "9.1.1",
-    "@types/jest": "25.2.1",
+    "@angular/common": "10.0.2",
+    "@angular/core": "10.0.2",
+    "@types/jest": "26.0.4",
     "apollo-link": "1.2.14",
-    "graphql": "15.0.0",
+    "graphql": "15.3.0",
     "graphql-tag": "2.10.3",
-    "jest": "25.3.0",
-    "ng-packagr": "9.1.1",
-    "ts-jest": "25.3.1",
-    "typescript": "3.8.3"
+    "jest": "26.1.0",
+    "ng-packagr": "10.0.0",
+    "ts-jest": "26.1.1",
+    "typescript": "3.9.6"
   }
 }
