--- a/packages/apollo-angular-link-http/package.json
+++ b/packages/apollo-angular-link-http/package.json
@@ -11,7 +11,7 @@
   "main": "build/bundles/ngApolloLinkHttp.umd.js",
   "module": "build/fesm5/ngApolloLinkHttp.js",
   "typings": "build/ngApolloLinkHttp.d.ts",
-  "version": "1.10.0",
+  "version": "1.11.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/kamilkisiela/apollo-angular",
@@ -36,7 +36,7 @@
     "graphql": ">=0.11.0 <0.14.0 || ^14.0.0 || ^15.0.0"
   },
   "dependencies": {
-    "apollo-angular-link-http-common": "~1.9.0",
+    "apollo-angular-link-http-common": "~1.10.0",
     "extract-files": "6.0.0",
     "tslib": "^2.0.0"
   },
@@ -50,7 +50,7 @@
     "@angular/platform-browser-dynamic": "10.0.2",
     "@angular/platform-server": "10.0.2",
     "@types/jest": "26.0.4",
-    "apollo-angular": "1.9.1",
+    "apollo-angular": "1.10.0",
     "apollo-cache-inmemory": "1.6.6",
     "apollo-client": "2.6.10",
     "apollo-link": "1.2.14",
@@ -63,5 +63,9 @@
     "ts-jest": "26.1.1",
     "typescript": "3.9.6",
     "zone.js": "0.10.3"
+  },
+  "publishConfig":{
+    "access": "public",
+    "registry":"https://registry.npmjs.org"
   }
 }
