--- a/packages/apollo-angular-link-persisted/package.json
+++ b/packages/apollo-angular-link-persisted/package.json
@@ -11,7 +11,7 @@
   "main": "build/bundles/ngApolloLinkPersisted.umd.js",
   "module": "build/fesm5/ngApolloLinkPersisted.js",
   "typings": "build/ngApolloLinkPersisted.d.ts",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/kamilkisiela/apollo-angular",
@@ -46,5 +46,9 @@
     "ng-packagr": "10.0.0",
     "ts-jest": "26.1.1",
     "typescript": "3.9.6"
+  },
+  "publishConfig":{
+    "access": "public",
+    "registry":"https://registry.npmjs.org"
   }
 }
