--- a/packages/apollo-angular/package.json
+++ b/packages/apollo-angular/package.json
@@ -1,7 +1,7 @@
 {
   "name": "apollo-angular",
   "description": "Use your GraphQL data in your Angular app, with the Apollo Client",
-  "version": "1.9.1",
+  "version": "1.10.0",
   "author": {
     "name": "Kamil Kisiela",
     "email": "kamil.kisiela@gmail.com",
@@ -76,5 +76,9 @@
     "typescript": "3.9.6",
     "zone.js": "0.10.3"
   },
-  "schematics": "./schematics/collection.json"
+  "schematics": "./schematics/collection.json",
+  "publishConfig":{
+    "access": "public",
+    "registry":"https://registry.npmjs.org"
+  }
 }
