--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,11 @@
       "source": "/docs",
       "destination": "/docs/index",
       "permanent": true
+    },
+    {
+      "source": "/",
+      "destination": "/docs/index",
+      "permanent": true
     }
   ],
   "github": {
