--- a/website/package.json
+++ b/website/package.json
@@ -2,7 +2,7 @@
   "name": "apollo-angular-website",
   "scripts": {
     "start": "docusaurus start",
-    "build": "node ./links.js && docusaurus build",
+    "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy"
   },
