Prepare for v2 docs

--- a/website/package.json
+++ b/website/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "@docusaurus/core": "2.0.0-alpha.61",
+    "@docusaurus/plugin-client-redirects": "2.0.0-alpha.61",
+    "@docusaurus/plugin-ideal-image": "2.0.0-alpha.61",
     "@docusaurus/preset-classic": "2.0.0-alpha.61",
     "globby": "11.0.1",
     "react": "16.13.1",
