--- a/packages/apollo-angular/package.json
+++ b/packages/apollo-angular/package.json
@@ -79,6 +79,16 @@
     "zone.js": "0.10.3"
   },
   "schematics": "./schematics/collection.json",
+  "ng-update": {
+    "requirements": {},
+    "migrations": "./schematics/migrations.json",
+    "packageGroupName": "apollo-angular",
+    "packageGroup": [
+      "apollo-angular",
+      "@apollo/client",
+      "graphql"
+    ]
+  },
   "publishConfig":{
     "access": "public",
     "registry":"https://registry.npmjs.org"
