--- a/packages/apollo-angular/package.json
+++ b/packages/apollo-angular/package.json
@@ -47,7 +47,7 @@
     "zone.js": "~0.8.20 || ~0.9.0 || ~0.10.0"
   },
   "dependencies": {
-    "semver": "^7.0.0",
+    "@graphql-typed-document-node/core": "^2.1.0",
     "extract-files": "^9.0.0",
     "tslib": "^2.0.0"
   },
@@ -67,7 +67,6 @@
     "@types/extract-files": "8.1.0",
     "@types/jest": "26.0.7",
     "@types/node": "14.0.25",
-    "@types/semver": "7.3.1",
     "cpx": "1.5.0",
     "graphql": "15.3.0",
     "jest": "26.1.0",
