--- a/packages/apollo-angular/package.json
+++ b/packages/apollo-angular/package.json
@@ -29,10 +29,11 @@
     "build": "ng-packagr -p ng-package.js && yarn build:schematics",
     "build:schematics": "tsc -p schematics/tsconfig.json && node ./scripts/move-schematics.js",
     "test": "yarn test-only",
-    "posttest": "yarn test:testing && yarn test:http && yarn test:headers && yarn test:schematics",
+    "posttest": "yarn test:testing && yarn test:http && yarn test:persisted-queries && yarn test:headers && yarn test:schematics",
     "test-only": "jest --config jest.config.js",
     "test:testing": "jest --config testing/jest.config.js",
     "test:http": "jest --config http/jest.config.js",
+    "test:persisted-queries": "jest --config persisted-queries/jest.config.js",
     "test:headers": "jest --config headers/jest.config.js",
     "test:schematics": "jest --config schematics/jest.config.js",
     "prebuild": "rm -rf build/",
@@ -62,7 +63,7 @@
     "@angular/platform-browser": "10.0.5",
     "@angular/platform-browser-dynamic": "10.0.5",
     "@angular/platform-server": "10.0.5",
-    "@apollo/client": "3.0.2",
+    "@apollo/client": "3.2.5",
     "@schematics/angular": "10.0.4",
     "@types/extract-files": "8.1.0",
     "@types/jest": "26.0.7",
