--- a/website/package.json
+++ b/website/package.json
@@ -2,18 +2,17 @@
   "name": "apollo-angular-website",
   "scripts": {
     "start": "docusaurus start",
-    "build": "node links.js && docusaurus build",
-    "swizzle": "docusaurus swizzle",
+    "build": "docusaurus build",
     "deploy": "docusaurus deploy"
   },
   "dependencies": {
-    "@docusaurus/core": "2.0.0-alpha.61",
-    "@docusaurus/plugin-client-redirects": "2.0.0-alpha.61",
-    "@docusaurus/plugin-ideal-image": "2.0.0-alpha.61",
-    "@docusaurus/preset-classic": "2.0.0-alpha.61",
+    "@docusaurus/core": "2.0.0-alpha.65",
+    "@docusaurus/plugin-client-redirects": "2.0.0-alpha.65",
+    "@docusaurus/plugin-ideal-image": "2.0.0-alpha.65",
+    "@docusaurus/preset-classic": "2.0.0-alpha.65",
     "globby": "11.0.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react": "17.0.1",
+    "react-dom": "17.0.1"
   },
   "browserslist": {
     "production": [
