--- a/package.json
+++ b/package.json
@@ -4,26 +4,25 @@
   "license": "MIT",
   "scripts": {
     "prebuild": "rimraf packages/*/build/",
-    "build": "lerna run build",
-    "test": "lerna run test",
+    "build": "yarn workspaces run build",
+    "test": "yarn workspaces run test",
     "format": "prettier --write \"packages/**/*.ts\"",
-    "deploy": "lerna run deploy",
+    "deploy": "yarn workspaces run deploy",
     "now-build": "(cd website && yarn && yarn build && mv build ../public)"
   },
   "workspaces": [
     "packages/*"
   ],
   "devDependencies": {
-    "@types/jest": "26.0.7",
-    "husky": "4.2.5",
-    "jest": "26.1.0",
-    "lerna": "3.22.1",
-    "lint-staged": "10.2.11",
-    "prettier": "2.0.5",
+    "@types/jest": "26.0.15",
+    "husky": "4.3.0",
+    "jest": "26.6.3",
+    "lint-staged": "10.5.1",
+    "prettier": "2.1.2",
     "react": "17.0.1",
     "rimraf": "3.0.2",
     "shelljs": "0.8.4",
-    "typescript": "3.9.7"
+    "typescript": "4.0.5"
   },
   "husky": {
     "hooks": {
