--- a/package.json
+++ b/package.json
@@ -14,15 +14,37 @@
     "packages/*"
   ],
   "devDependencies": {
-    "@types/jest": "26.0.15",
-    "husky": "4.3.0",
+    "@angular-devkit/core": "11.0.7",
+    "@angular-devkit/schematics": "11.0.7",
+    "@angular/animations": "11.0.9",
+    "@angular/common": "11.0.9",
+    "@angular/compiler": "11.0.9",
+    "@angular/compiler-cli": "11.0.9",
+    "@angular/core": "11.0.9",
+    "@angular/platform-browser": "11.0.9",
+    "@angular/platform-browser-dynamic": "11.0.9",
+    "@angular/platform-server": "11.0.9",
+    "@apollo/client": "3.3.7",
+    "@schematics/angular": "11.0.7",
+    "@types/extract-files": "8.1.0",
+    "@types/jest": "26.0.20",
+    "@types/node": "14.14.21",
+    "@types/semver": "7.3.4",
+    "cpx": "1.5.0",
+    "graphql": "15.4.0",
+    "jest-zone-patch": "0.0.10",
+    "ng-packagr": "11.0.3",
+    "husky": "4.3.8",
     "jest": "26.6.3",
-    "lint-staged": "10.5.1",
-    "prettier": "2.1.2",
+    "lint-staged": "10.5.3",
+    "prettier": "2.2.1",
     "react": "17.0.1",
     "rimraf": "3.0.2",
+    "rxjs": "6.6.3",
     "shelljs": "0.8.4",
-    "typescript": "4.0.5"
+    "ts-jest": "26.4.4",
+    "typescript": "4.0.5",
+    "zone.js": "0.11.3"
   },
   "husky": {
     "hooks": {
