--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,5 +61,54 @@ jobs:
           path: 'packages/apollo-angular/apollo-angular.tgz'
           key: ${{ github.sha }}
 
+      uses: DamianReeves/write-file-action
+      name: Write verdaccio config
+      with:
+        path: verdaccio.yaml
+        contents: |
+          auth:
+            auth-memory:
+              users:
+                foo:
+                  name: test
+                  password: test
+          store:
+            memory:
+              limit: 1000
+          npmjs:
+            url: https://registry.npmjs.org/
+          packages:
+            '@*/*':
+              access: $all
+              publish: $all
+            '**':
+              access: $all
+              publish: $all
+          middlewares:
+            audit:
+              enabled: true
+          logs:
+            - {type: stdout, format: pretty, level: trace}
+        write-mode: overwrite
+
+      - name: Install Verdaccio
+        run: yarn global install verdaccio
+
+      - name: Start Verdaccio
+        run: nohup verdaccio --config verdaccio.yaml &> mktemp &
+
+      - name: Wait for Verdaccio
+        run: grep -q 'http address' <(tail -f mktemp)
+
+      - name: Authenticate
+        run: npm-auth-to-token -u test -p test -e test@test.com -r http://0.0.0.0:4873
+
+      - name: Publish
+        run: npm --registry http://0.0.0.0:4873 publish package/apollo-angular/apollo-angular.tgz
+
       - name: Create Nx Workspace
-        run: npx create-nx-workspace test-ng --preset=angular --appName=gql --style=css --linter=eslint --nxCloud=false
+        run: npx create-nx-workspace test-ng --preset=angular --appName=gql --style=css --linter=eslint --cli=angular --nxCloud=false
+
+      - name: ng add apollo-angular
+        working-directory: test-ng
+        run: ng add apollo-angular --registry http://0.0.0.0:4873
