--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -100,7 +100,7 @@ jobs:
         run: yarn global add verdaccio verdaccio-auth-memory
 
       - name: Start Verdaccio
-        run: nohup verdaccio --config verdaccio.yaml &> mktemp.log &
+        run: nohup verdaccio --config verdaccio.yaml
 
       - name: Wait for Verdaccio
         run: grep -q 'http address' <(tail -f mktemp.log)
