--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -97,7 +97,7 @@ jobs:
           write-mode: overwrite
 
       - name: Install Verdaccio
-        run: yarn global add verdaccio verdaccio-auth-memory
+        run: yarn global add verdaccio verdaccio-auth-memory --prefix /usr/local
 
       - name: Start Verdaccio
         run: nohup yarn verdaccio --config verdaccio.yaml
