Do not use publishConfig

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,7 +77,7 @@ jobs:
               keepAliveTimeout: 60
             uplinks:
               npmjs:
-                url: https://registry.npmjs.org/
+                url: https://registry.npmjs.org
             packages:
               '@*/*':
                 access: $all
