--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -106,7 +106,7 @@ jobs:
         run: npm publish ./packages/apollo-angular/apollo-angular.tgz --registry http://0.0.0.0:4873 --access public
 
       - name: Create Nx Workspace
-        run: yarn create nx-workspace test-ng --preset=angular --appName=gql --style=css --linter=eslint --cli=angular --nxCloud=false
+        run: npx create-nx-workspace test-ng --preset=angular --appName=gql --style=css --linter=eslint --cli=angular --nxCloud=false
 
       - name: ng add apollo-angular
         working-directory: test-ng
