--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,70 +44,70 @@ jobs:
           path: 'packages/apollo-angular/apollo-angular.tgz'
           key: ${{ github.sha }}
 
-  test-nx:
-    name: Test on Nx workspace
-    runs-on: ubuntu-latest
-    needs: test
+  # test-nx:
+  #   name: Test on Nx workspace
+  #   runs-on: ubuntu-latest
+  #   needs: test
 
-    steps:
-      - name: Use Node.js 14
-        uses: actions/setup-node@master
-        with:
-          node-version: 14
+  #   steps:
+  #     - name: Use Node.js 14
+  #       uses: actions/setup-node@master
+  #       with:
+  #         node-version: 14
 
-      - uses: actions/cache@v2
-        name: Share tarball
-        with:
-          path: 'packages/apollo-angular/apollo-angular.tgz'
-          key: ${{ github.sha }}
+  #     - uses: actions/cache@v2
+  #       name: Share tarball
+  #       with:
+  #         path: 'packages/apollo-angular/apollo-angular.tgz'
+  #         key: ${{ github.sha }}
 
-      - uses: DamianReeves/write-file-action@master
-        name: Write verdaccio config
-        with:
-          path: verdaccio.yaml
-          contents: |
-            auth:
-              auth-memory:
-                users:
-                  foo:
-                    name: test
-                    password: test
-            storage: ./storage
-            server:
-              keepAliveTimeout: 60
-            uplinks:
-              npmjs:
-                url: https://registry.npmjs.org
-            packages:
-              '@*/*':
-                access: $all
-                publish: $all
-              '**':
-                access: $all
-                publish: $all
-            middlewares:
-              audit:
-                enabled: true
-            logs:
-              - {type: stdout, format: pretty, level: trace}
-          write-mode: overwrite
+  #     - uses: DamianReeves/write-file-action@master
+  #       name: Write verdaccio config
+  #       with:
+  #         path: verdaccio.yaml
+  #         contents: |
+  #           auth:
+  #             auth-memory:
+  #               users:
+  #                 foo:
+  #                   name: test
+  #                   password: test
+  #           storage: ./storage
+  #           server:
+  #             keepAliveTimeout: 60
+  #           uplinks:
+  #             npmjs:
+  #               url: https://registry.npmjs.org
+  #           packages:
+  #             '@*/*':
+  #               access: $all
+  #               publish: $all
+  #             '**':
+  #               access: $all
+  #               publish: $all
+  #           middlewares:
+  #             audit:
+  #               enabled: true
+  #           logs:
+  #             - {type: stdout, format: pretty, level: trace}
+  #         write-mode: overwrite
 
-      - name: Install Verdaccio
-        run: npm install -g verdaccio verdaccio-auth-memory
+  #     - name: Install Verdaccio
+  #       run: npm install -g verdaccio verdaccio-auth-memory
 
-      - name: Start Verdaccio
-        run: nohup verdaccio --config verdaccio.yaml &> mktemp.log &
+  #     - name: Start Verdaccio
+  #       run: nohup verdaccio --config verdaccio.yaml &> mktemp.log &
 
-      - name: Wait for Verdaccio
-        run: grep -q 'http address' <(tail -f mktemp.log)
-        timeout-minutes: 3
+  #     - name: Wait for Verdaccio
+  #       run: grep -q 'http address' <(tail -f mktemp.log)
+  #       timeout-minutes: 3
 
-      - name: Publish
-        run: npm publish ./packages/apollo-angular/apollo-angular.tgz --registry http://0.0.0.0:4873 --access public
+  #     - name: Publish
+  #       run: npm publish ./packages/apollo-angular/apollo-angular.tgz --registry http://0.0.0.0:4873 --access public
 
-      - name: Create Nx Workspace
-        run: npx create-nx-workspace test-ng --preset=angular --appName=gql --style=css --linter=eslint --cli=angular --nxCloud=false
+  #     - name: Create Nx Workspace
+  #       run: npx create-nx-workspace test-ng --preset=angular --appName=gql --style=css --linter=eslint --cli=angular --nxCloud=false
 
-      - name: ng add apollo-angular
-        working-directory: test-ng
-        run: yarn ng add apollo-angular --registry http://0.0.0.0:4873
+  #     - name: ng add apollo-angular
+  #       working-directory: test-ng
+  #       run: yarn ng add apollo-angular --registry http://0.0.0.0:4873
