--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,7 @@
   "files.exclude": {
     "**/.git": true,
     "**/.DS_Store": true,
-    "**/node_modules/**": true,
+    "**/node_modules/**": false,
     "**/build/**": true,
     "**/coverage/**": true,
     "**/npm/**": true
