--- a/website/package.json
+++ b/website/package.json
@@ -13,7 +13,9 @@
     "@docusaurus/preset-classic": "2.0.0-alpha.72",
     "patch-package": "^6.4.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "5.1.0",
+    "the-guild-components": "^1.0.12"
   },
   "browserslist": {
     "production": [
