--- a/website/package.json
+++ b/website/package.json
@@ -15,7 +15,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "5.1.0",
-    "the-guild-components": "^1.0.12"
+    "the-guild-components": "1.0.13"
   },
   "browserslist": {
     "production": [
